src/test/deca/context/invalid/classmethode25.deca
class A {}

{
	A a;
	a.methodeinc();
}